--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Test">
+        <activity android:name=".Splash_Screen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -17,7 +17,7 @@
         </activity>
         <activity android:name=".CreateProfileActivity" />
         <activity android:name=".ProfileScreen" />
-        <activity android:name=".Splash_Screen"></activity>
+        <activity android:name=".Test"></activity>
     </application>
 
 </manifest>
