--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
         </activity>
         <activity android:name=".CreateProfileActivity" />
         <activity android:name=".ProfileScreen" />
-        <activity android:name=".Test"></activity>
+        <activity android:name=".Test" />
+        <activity android:name=".TrueStrength"></activity>
     </application>
 
 </manifest>
